# python-api-template

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: codecov.yaml.bak
python_api_template/: main.py
tests/: full.py  single.py
tests/end_to_end/: end_to_end.py  response_time_hist.ipynb
