[project]
name = "python-api-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "pydantic>=2.10.1",
    "uvicorn>=0.32.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
    "jupyter>=1.1.1",
    "polars>=1.15.0",
    "pyarrow>=18.1.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "seaborn>=0.13.2",
    "mypy>=1.13.0",
]
